<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".About">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:gravity="center_vertical"
        android:background="@color/AdditionalColorCodeOne"
        android:elevation="20dp"
        android:padding="20dp">
        <ImageView
            android:id="@+id/btn_back_about"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/back_activity"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/source_serif_pro_regular"
            android:textSize="25dp"
            android:text="About"
            android:layout_marginLeft="20dp"
            android:textColor="@color/PrimaryColorCodeOne"
            android:textStyle="bold"/>

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">
        <LinearLayout
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="20dp"
            tools:context=".MainActivity">


            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_txt1"
                android:textColor="@color/black"
                android:fontFamily="@font/source_serif_pro_regular"
                android:textAlignment="center"
                android:layout_marginVertical="10dp"
                 />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_txt2"
                android:textColor="@color/black"
                android:fontFamily="@font/source_serif_pro_regular"
                android:textAlignment="center"
                android:layout_marginVertical="10dp"
                />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_txt3"
                android:textColor="@color/black"
                android:fontFamily="@font/source_serif_pro_regular"
                android:textAlignment="center"
                android:layout_marginVertical="10dp"
                 />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_txt4"
                android:textColor="@color/black"
                android:fontFamily="@font/source_serif_pro_regular"
                android:textAlignment="center"
                android:layout_marginVertical="10dp"
                 />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/source_serif_pro_regular"
                android:textAlignment="center"
                android:layout_marginVertical="10dp"
                android:text="@string/about_txt5"
                android:textColor="@color/black"
                />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/source_serif_pro_regular"
                android:textAlignment="center"
                android:layout_marginVertical="10dp"
                android:text="@string/about_txt6"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/source_serif_pro_regular"
                android:textAlignment="center"
                android:layout_marginVertical="10dp"
                android:text="@string/about_txt7"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:fontFamily="@font/source_serif_pro_regular"
                android:text="@string/about_txt8"
                android:textAlignment="center"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:fontFamily="@font/source_serif_pro_regular"
                android:text="@string/about_txt9"
                android:textAlignment="center"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:fontFamily="@font/source_serif_pro_regular"
                android:text="@string/about_txt10"
                android:textAlignment="center"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:fontFamily="@font/source_serif_pro_regular"
                android:text="@string/about_txt11"
                android:textAlignment="center"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/source_serif_pro_regular"
                android:textAlignment="center"
                android:layout_marginVertical="10dp"
                android:text="@string/about_txt12"
                android:textColor="@color/black" />


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/feedback"
                android:background="@color/PrimaryColorCodeOne"
                android:textAllCaps="false"
                android:textColor="@color/AdditionalColorCodeOne"
                android:paddingHorizontal="50dp"
                android:layout_marginTop="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="FeedBack" />


        </LinearLayout>
    </ScrollView>


  </LinearLayout>